k8s/aws-eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: nestjs-k8s
  namespace: stagging
  labels:
    app: nestjs-k8s
spec: 
  selector:
    matchLabels:
      app: nestjs-k8s
  replicas: 1
  template:
    metadata: 
      labels:
        app: nestjs-k8s
    spec: 
      containers:
       - name: nestjs-k8s
         image: chinoyerem/sample-k8s-nest-project
         ports:
         - containerPort: 3000
        #  env:
        #     - name: POD_NAME
        #       valueFrom:
        #        fieldRef:
        #          fieldPath: metadate.name
        #     - name : POD_NAMESPACE
        #       valueFrom:
        #         fieldRef:
        #           fieldPath: metadata.annotations['pod_name']
        #     - name: POD_IP
        #       valueFrom:
        #         fieldRef:
        #           fieldPath: status.podIP
