k8s/aws-eks/nestjs-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nestjs-k8s
  name: nestjs-k8s-service
  namespace: staging
spec:
  type: NodePort
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
    nodePort: 30100
  selector:
    app: nestjs-k8s
