k8s/aws-eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nestjs-k8s
  namespace: staging
spec:
  selector:
    app: nestjs-k8s
  ports:
    - port: 80
      targetPort: 3000
  type:  NodePort
